--- a/app/src/main/res/layout/fragment_shipment_nav.xml
+++ b/app/src/main/res/layout/fragment_shipment_nav.xml
@@ -1,16 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ShipmentNavFragment">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+<!-- Main content -->
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Add Shipment"
+    android:textSize="40sp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/user_shipments_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Shipment"
-        android:textSize="50dp" />
+        android:layout_height="600dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/down"
+        android:drawSelectorOnTop="true"
+        android:orientation="vertical" />
 
-</FrameLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:srcCompat="@drawable/bushape"
+        tools:ignore="RelativeOverlap" />
+
+</RelativeLayout>
