--- a/app/src/main/res/layout/activity_create_shipment.xml
+++ b/app/src/main/res/layout/activity_create_shipment.xml
@@ -6,93 +6,106 @@
     android:layout_height="match_parent"
     android:layout_gravity="left">
 
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="133dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
-        android:width="80dp"
+    <EditText
+        android:id="@+id/create_shipment_item_urll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:width="300dp"
         android:height="40dp"
-        android:gravity="center"
-        android:text="Total Weight"
-        app:layout_constraintStart_toEndOf="@+id/textView12"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        android:gravity="center_vertical"
+        android:hint="item Url"
+        app:layout_constraintEnd_toEndOf="@+id/create_shipment_item_name"
+        app:layout_constraintStart_toStartOf="@+id/create_shipment_item_name"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_name" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/create_shipment_item_total_weight"
         android:layout_width="133dp"
-        android:layout_height="37dp"
+        android:layout_height="43dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
         android:width="80dp"
         android:height="40dp"
         android:gravity="center"
-        android:text="total price"
-        app:layout_constraintStart_toEndOf="@+id/textView13"
+        android:text="Total Weight=0gm"
+        app:layout_constraintStart_toEndOf="@+id/create_shipment_item_weight"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_price" />
+
+    <TextView
+        android:id="@+id/create_shipment_item_total_price"
+        android:layout_width="133dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="20dp"
+        android:width="80dp"
+        android:height="40dp"
+        android:gravity="center"
+        android:text="total price=0$"
+        app:layout_constraintStart_toEndOf="@+id/create_shipment_item_price"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <TextView
         android:id="@+id/textView14"
         android:layout_width="116dp"
         android:layout_height="43dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="18dp"
         android:width="80dp"
         android:height="40dp"
         android:gravity="center"
         android:text="Items number"
-        app:layout_constraintStart_toStartOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintStart_toStartOf="@+id/create_shipment_item_urll"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_urll" />
 
-    <TextView
-        android:id="@+id/textView13"
+    <EditText
+        android:id="@+id/create_shipment_item_price"
         android:layout_width="133dp"
-        android:layout_height="37dp"
+        android:layout_height="43dp"
         android:layout_marginTop="20dp"
         android:width="80dp"
         android:height="40dp"
         android:gravity="center"
-        android:text="Item Price"
+        android:hint="Item Price"
         app:layout_constraintStart_toStartOf="@+id/textView14"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
-    <TextView
-        android:id="@+id/textView12"
+    <EditText
+        android:id="@+id/create_shipment_item_weight"
         android:layout_width="133dp"
-        android:layout_height="37dp"
+        android:layout_height="43dp"
         android:layout_marginTop="20dp"
         android:width="80dp"
         android:height="40dp"
         android:gravity="center"
-        android:text="item Weight"
-        app:layout_constraintStart_toStartOf="@+id/textView13"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        android:hint="item Weight"
+        app:layout_constraintStart_toStartOf="@+id/create_shipment_item_price"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_price" />
 
-    <TextView
-        android:id="@+id/textView9"
+    <EditText
+        android:id="@+id/create_shipment_date"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginTop="18dp"
         android:gravity="center_vertical"
-        android:text="Date"
-        app:layout_constraintEnd_toEndOf="@+id/textView7"
+        android:hint="Date"
+        app:layout_constraintEnd_toEndOf="@+id/create_shipment_to"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintStart_toStartOf="@+id/create_shipment_to"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_to" />
 
-    <TextView
-        android:id="@+id/textView7"
+    <EditText
+        android:id="@+id/create_shipment_to"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginTop="18dp"
         android:gravity="center_vertical"
-        android:text="To"
-        app:layout_constraintEnd_toEndOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        android:hint="To"
+        app:layout_constraintEnd_toEndOf="@+id/create_shipment_from"
+        app:layout_constraintStart_toStartOf="@+id/create_shipment_from"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_from" />
 
-    <TextView
-        android:id="@+id/textView3"
+    <EditText
+        android:id="@+id/create_shipment_from"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginStart="50dp"
@@ -100,86 +113,85 @@
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="20dp"
         android:gravity="center_vertical"
-        android:text="From"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
+        android:hint="From"
+        app:layout_constraintBottom_toTopOf="@+id/create_shipment_to"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView10"
+    <EditText
+        android:id="@+id/create_shipment_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:width="300dp"
         android:height="40dp"
         android:gravity="center_vertical"
-        android:text="item name"
-        app:layout_constraintEnd_toEndOf="@+id/textView9"
-        app:layout_constraintStart_toStartOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        android:hint="item name"
+        app:layout_constraintEnd_toEndOf="@+id/create_shipment_date"
+        app:layout_constraintStart_toStartOf="@+id/create_shipment_date"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_date" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
+    <Button
+        android:id="@+id/create_shipment_get_image_button"
         android:layout_width="130dp"
         android:layout_height="57dp"
         android:layout_marginTop="20dp"
         android:foreground="@android:drawable/ic_menu_camera"
-        app:layout_constraintStart_toStartOf="@+id/textView12"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintStart_toStartOf="@+id/create_shipment_item_weight"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_weight" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/create_shipment_item_number"
         android:layout_width="79dp"
         android:layout_height="43dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="104dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="100dp"
         android:ems="10"
         android:gravity="center"
         android:inputType="number"
         android:text="0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_urll" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+    <Button
+        android:id="@+id/create_shipment_plus_item"
         android:layout_width="42dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="18dp"
         android:clickable="true"
         android:foreground="@android:drawable/ic_input_add"
-        app:layout_constraintEnd_toStartOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintEnd_toStartOf="@+id/create_shipment_item_number"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_urll" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton2"
+    <Button
+        android:id="@+id/create_shipment_minus_item"
         android:layout_width="45dp"
         android:layout_height="43dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="18dp"
         android:clickable="true"
         android:foreground="@android:drawable/ic_delete"
-        app:layout_constraintStart_toEndOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintStart_toEndOf="@+id/create_shipment_item_number"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_urll" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/create_shipment_the_image"
         android:layout_width="140dp"
         android:layout_height="140dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintStart_toEndOf="@+id/imageButton"
-        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        app:layout_constraintStart_toEndOf="@+id/create_shipment_get_image_button"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_weight"
         app:srcCompat="@android:drawable/ic_menu_gallery" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/create_shipment_add_button"
         android:layout_width="130dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:text="Add shipment"
-        app:layout_constraintStart_toStartOf="@+id/imageButton"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+        app:layout_constraintStart_toStartOf="@+id/create_shipment_get_image_button"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_get_image_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
