work on profile -> before uploading

--- a/app/src/main/res/layout/fragment_trip_nav.xml
+++ b/app/src/main/res/layout/fragment_trip_nav.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TripNavFragment">
+    tools:context="Shipments_Trips_classes.TripNavFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
