--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -1,45 +1,224 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#B7A1ABAC">
 
+
+    <TextView
+        android:id="@+id/profile_phone_textview"
+        android:layout_width="220dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center_vertical|end"
+        android:text="no phone yet"
+        android:textColor="@color/gray2"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_email_textview" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="90dp"
+        android:layout_height="35dp"
+        android:gravity="center"
+        android:text="Shipments"
+        android:textSize="17sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintStart_toEndOf="@+id/profile_trips_number_textview"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="90dp"
+        android:layout_height="35dp"
+        android:gravity="center"
+        android:text="Trips"
+        android:textSize="17sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintStart_toEndOf="@+id/profile_shipments_number_textview"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <TextView
+        android:id="@+id/profile_trips_number_textview"
+        android:layout_width="50dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="8dp"
+        android:gravity="center"
+        android:text="0"
+        android:textSize="19sp"
+        app:layout_constraintStart_toEndOf="@+id/profile_image_imageview"
+        app:layout_constraintTop_toBottomOf="@+id/profile_shipments_number_textview" />
+
+    <TextView
+        android:id="@+id/profile_shipments_number_textview"
+        android:layout_width="50dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="8dp"
+        android:gravity="center"
+        android:text="0"
+        android:textSize="19sp"
+        app:layout_constraintStart_toEndOf="@+id/profile_image_imageview"
+        app:layout_constraintTop_toBottomOf="@+id/profile_deals_number_textview" />
 
     <ImageButton
         android:id="@+id/profile_back_button"
         android:layout_width="68dp"
-        android:layout_height="42dp"
+        android:layout_height="40dp"
         android:layout_marginStart="27dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="22dp"
         android:background="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_media_rew" />
 
     <TextView
-        android:id="@+id/profile_user_name"
-        android:layout_width="180dp"
+        android:id="@+id/profile_user_name_textview"
+        android:layout_width="189dp"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="24dp"
         android:gravity="center"
         android:text="User name"
-        app:layout_constraintStart_toEndOf="@+id/profile_back_button"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_image_imageview" />
 
     <Button
         android:id="@+id/profile_edit_button"
         android:layout_width="89dp"
         android:layout_height="40dp"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="22dp"
         android:layout_marginEnd="17dp"
         android:background="#FFFFFF"
         android:text="Edit"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/profile_user_name"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/profile_image_imageview"
+        android:layout_width="189dp"
+        android:layout_height="186dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="110dp"
+        android:background="#FFFFFF"
+        android:foreground="@android:drawable/ic_input_add"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <CheckBox
+        android:id="@+id/profile_phone_checkBox"
+        android:layout_width="151dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="110dp"
+        android:text="phone varefied"
+        app:layout_constraintStart_toEndOf="@+id/profile_image_imageview"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <CheckBox
+        android:id="@+id/profile_passport_checkbox"
+        android:layout_width="151dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="10dp"
+        android:text="passpore varefied"
+        app:layout_constraintStart_toEndOf="@+id/profile_image_imageview"
+        app:layout_constraintTop_toBottomOf="@+id/profile_phone_checkBox" />
+
+    <TextView
+        android:id="@+id/profile_deals_number_textview"
+        android:layout_width="50dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="0"
+        android:textSize="19sp"
+        app:layout_constraintStart_toEndOf="@+id/profile_image_imageview"
+        app:layout_constraintTop_toBottomOf="@+id/profile_passport_checkbox" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="90dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="Deals"
+        android:textSize="17sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintStart_toEndOf="@+id/profile_deals_number_textview"
+        app:layout_constraintTop_toBottomOf="@+id/profile_passport_checkbox" />
+
+    <CheckedTextView
+        android:id="@+id/profile_email_checktext"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="32dp"
+        android:checked="true"
+        android:checkMark="@drawable/round_check_circle_white_18dp"
+        android:gravity="center_vertical"
+        android:text="Email "
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_user_name_textview" />
+
+    <CheckedTextView
+        android:id="@+id/profile_phone_checktext"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="7dp"
+        android:checkMark="@drawable/round_check_circle_white_18dp"
+        android:checked="true"
+        android:gravity="center_vertical"
+        android:text="phone number "
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_email_checktext" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="50dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="21dp"
+        android:text="Rate"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/profile_user_name_textview"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+    <RatingBar
+        android:id="@+id/profile_ratingbar"
+        style="?android:attr/ratingBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="25dp"
+        android:numStars="5"
+        android:rating="4.3"
+        android:stepSize="0.1"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+    <TextView
+        android:id="@+id/profile_email_textview"
+        android:layout_width="240dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center_vertical|end"
+        android:text="no email yet"
+        android:textColor="@color/gray2"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_user_name_textview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
