work on profile -> before uploading

--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="7dp"
         android:layout_marginEnd="16dp"
         android:gravity="center_vertical|end"
-        android:text="no phone yet"
+        android:text=""
         android:textColor="@color/gray2"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -159,7 +159,6 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="32dp"
         android:checked="true"
-        android:checkMark="@drawable/round_check_circle_white_18dp"
         android:gravity="center_vertical"
         android:text="Email "
         android:textSize="18sp"
@@ -173,7 +172,6 @@
         android:layout_height="50dp"
         android:layout_marginStart="23dp"
         android:layout_marginTop="7dp"
-        android:checkMark="@drawable/round_check_circle_white_18dp"
         android:checked="true"
         android:gravity="center_vertical"
         android:text="phone number "
@@ -214,7 +212,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:gravity="center_vertical|end"
-        android:text="no email yet"
+        android:text=""
         android:textColor="@color/gray2"
         android:textSize="18sp"
         android:textStyle="bold"
