--- a/app/src/main/res/layout/activity_edit_profile_page.xml
+++ b/app/src/main/res/layout/activity_edit_profile_page.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="24dp"
         android:gravity="center"
-        android:hint="last name"
+        android:hint="@string/last_name_word"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/edit_profile_first_name_edit_text"
         app:layout_constraintTop_toBottomOf="@+id/edit_profile_image_image_view" />
@@ -42,7 +42,7 @@
         android:layout_marginTop="7dp"
         android:checked="true"
         android:gravity="center_vertical"
-        android:text="passport num: "
+        android:text="@string/passport_num_word"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
         android:layout_marginStart="72dp"
         android:layout_marginTop="24dp"
         android:gravity="center"
-        android:hint="first name"
+        android:hint="@string/first_name_word"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_profile_image_image_view" />
@@ -109,7 +109,7 @@
         android:layout_marginTop="32dp"
         android:checked="true"
         android:gravity="center_vertical"
-        android:text="Email: "
+        android:text="@string/email_word"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,7 +123,7 @@
         android:layout_marginTop="7dp"
         android:checked="true"
         android:gravity="center_vertical"
-        android:text="phone num:"
+        android:text="@string/phone_num_word"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +149,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="105dp"
         android:layout_marginBottom="51dp"
-        android:text="Save Changes"
+        android:text="@string/save_changes_word"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -158,7 +158,7 @@
         android:layout_width="189dp"
         android:layout_height="30dp"
         android:gravity="center"
-        android:text="Change Photo"
+        android:text="@string/change_photo_word"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/edit_profile_image_image_view"
