--- a/app/src/main/res/layout/fragment_search_nav.xml
+++ b/app/src/main/res/layout/fragment_search_nav.xml
@@ -22,7 +22,7 @@
                 android:layout_width="220dp"
                 android:layout_height="35dp"
                 android:padding="7dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:background="#FFF"
                 android:textColorHighlight="#000"
                 android:hint="From Enter Countery"
@@ -33,7 +33,7 @@
                 android:layout_height="35dp"
                 android:padding="7dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:background="#FFF"
                 android:textColorHighlight="#000"
                 android:hint="To Enter Countery"
@@ -45,7 +45,7 @@
                 android:layout_height="35dp"
                 android:padding="7dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:background="#FFF"
                 android:textColorHighlight="#000"
                 android:hint="day/mon/year"
@@ -61,8 +61,8 @@
                 android:textColorHighlight="#000"
                 android:hint="Weight (Kg)"
                 android:inputType="textAutoComplete"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@+id/from"
+                android:layout_marginStart="20dp"
+                android:layout_toEndOf="@+id/from"
                 />
 
             <Button
@@ -70,11 +70,11 @@
                 android:layout_width="130dp"
                 android:layout_height="50dp"
                 android:padding="7dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="13dp"
-                android:layout_toRightOf="@+id/date"
+                android:layout_toEndOf="@+id/date"
                 android:layout_below="@+id/weight"
-                android:text="Search"
+                android:text="@string/search_word"
                 android:textSize="15sp"
                 android:background="@color/gray2"
                 />
