--- a/app/src/main/res/layout/activity_create_shipment.xml
+++ b/app/src/main/res/layout/activity_create_shipment.xml
@@ -8,14 +8,61 @@
     android:background="#9BB6B3">
 
     <EditText
-        android:id="@+id/create_shipment_item_urll"
+        android:id="@+id/create_shipment_item_number"
+        android:layout_width="79dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="100dp"
+        android:ems="10"
+        android:gravity="center"
+        android:inputType="number"
+        android:text="0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_total_weight" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="116dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="16dp"
+        android:width="80dp"
+        android:height="40dp"
+        android:gravity="center"
+        android:text="@string/item_number_word"
+        app:layout_constraintStart_toStartOf="@+id/create_shipment_item_weight"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_weight" />
+
+    <Button
+        android:id="@+id/create_shipment_minus_item"
+        android:layout_width="45dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="@android:drawable/ic_delete"
+        app:layout_constraintStart_toEndOf="@+id/create_shipment_item_number"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_total_weight" />
+
+    <Button
+        android:id="@+id/create_shipment_plus_item"
+        android:layout_width="42dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="@android:drawable/ic_input_add"
+        app:layout_constraintEnd_toStartOf="@+id/create_shipment_item_number"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_total_weight" />
+
+    <EditText
+        android:id="@+id/create_shipment_item_url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:width="300dp"
         android:height="40dp"
         android:gravity="center_vertical"
-        android:hint="item Url"
+        android:hint="@string/item_url_word"
         app:layout_constraintEnd_toEndOf="@+id/create_shipment_item_name"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_item_name"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_name" />
@@ -28,46 +75,34 @@
         android:width="80dp"
         android:height="40dp"
         android:gravity="center"
-        android:text="Total Weight=0gm"
+        android:text="Total Weight = 0gm"
         app:layout_constraintStart_toEndOf="@+id/create_shipment_item_weight"
-        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_price" />
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_total_price" />
 
     <TextView
         android:id="@+id/create_shipment_item_total_price"
         android:layout_width="133dp"
         android:layout_height="43dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:width="80dp"
         android:height="40dp"
         android:gravity="center"
-        android:text="total price=0$"
+        android:text="Total Price= 0$"
         app:layout_constraintStart_toEndOf="@+id/create_shipment_item_price"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
-
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="116dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="18dp"
-        android:width="80dp"
-        android:height="40dp"
-        android:gravity="center"
-        android:text="Items number"
-        app:layout_constraintStart_toStartOf="@+id/create_shipment_item_urll"
-        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_urll" />
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_url" />
 
     <EditText
         android:id="@+id/create_shipment_item_price"
         android:layout_width="133dp"
         android:layout_height="43dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:width="80dp"
         android:height="40dp"
         android:gravity="center"
-        android:hint="Item Price"
-        app:layout_constraintStart_toStartOf="@+id/textView14"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        android:hint="@string/item_price_word"
+        app:layout_constraintStart_toStartOf="@+id/create_shipment_item_url"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_url" />
 
     <EditText
         android:id="@+id/create_shipment_item_weight"
@@ -86,7 +121,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="18dp"
         android:gravity="center_vertical"
-        android:hint="Date"
+        android:hint="@string/date_word"
         app:layout_constraintEnd_toEndOf="@+id/create_shipment_to"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_to"
@@ -98,7 +133,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="18dp"
         android:gravity="center_vertical"
-        android:hint="To"
+        android:hint="@string/to_word"
         app:layout_constraintEnd_toEndOf="@+id/create_shipment_from"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_from"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_from" />
@@ -112,7 +147,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="20dp"
         android:gravity="center_vertical"
-        android:hint="From"
+        android:hint="@string/from_word"
         app:layout_constraintBottom_toTopOf="@+id/create_shipment_to"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
@@ -127,7 +162,7 @@
         android:width="300dp"
         android:height="40dp"
         android:gravity="center_vertical"
-        android:hint="item name"
+        android:hint="@string/item_name_word"
         app:layout_constraintEnd_toEndOf="@+id/create_shipment_date"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_date"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_date" />
@@ -136,55 +171,20 @@
         android:id="@+id/create_shipment_get_image_button"
         android:layout_width="130dp"
         android:layout_height="57dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="32dp"
         android:foreground="@android:drawable/ic_menu_camera"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_item_weight"
-        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_weight" />
-
-    <EditText
-        android:id="@+id/create_shipment_item_number"
-        android:layout_width="79dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="100dp"
-        android:ems="10"
-        android:gravity="center"
-        android:inputType="number"
-        android:text="0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_urll" />
-
-    <Button
-        android:id="@+id/create_shipment_plus_item"
-        android:layout_width="42dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="18dp"
-        android:clickable="true"
-        android:foreground="@android:drawable/ic_input_add"
-        app:layout_constraintEnd_toStartOf="@+id/create_shipment_item_number"
-        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_urll"
-        android:focusable="true" />
-
-    <Button
-        android:id="@+id/create_shipment_minus_item"
-        android:layout_width="45dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="18dp"
-        android:clickable="true"
-        android:foreground="@android:drawable/ic_delete"
-        app:layout_constraintStart_toEndOf="@+id/create_shipment_item_number"
-        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_urll"
-        android:focusable="true" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <ImageView
         android:id="@+id/create_shipment_the_image"
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toEndOf="@+id/create_shipment_get_image_button"
-        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_weight"
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_number"
         app:srcCompat="@android:drawable/ic_menu_gallery" />
 
     <Button
