--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="44dp"
         android:gravity="center_vertical"
-        android:hint="Date"
+        android:hint="@string/date_word"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_trip_available_weight" />
@@ -27,7 +27,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="44dp"
         android:gravity="center_vertical"
-        android:hint="available weight"
+        android:hint="@string/available_weight_word"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="44dp"
         android:gravity="center_vertical"
-        android:hint="to"
+        android:hint="@string/to_word"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
         android:layout_marginEnd="44dp"
         android:layout_marginBottom="20dp"
         android:gravity="center_vertical"
-        android:hint="From"
+        android:hint="@string/from_word"
         app:layout_constraintBottom_toTopOf="@+id/create_trip_to"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
