--- a/app/src/main/res/layout/activity_edit_shipment.xml
+++ b/app/src/main/res/layout/activity_edit_shipment.xml
@@ -15,7 +15,7 @@
         android:width="300dp"
         android:height="40dp"
         android:gravity="center_vertical"
-        android:hint="item Url"
+        android:hint="@string/item_url_word"
         app:layout_constraintEnd_toEndOf="@+id/edit_shipment_item_name"
         app:layout_constraintStart_toStartOf="@+id/edit_shipment_item_name"
         app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_name" />
@@ -53,7 +53,7 @@
         android:width="80dp"
         android:height="40dp"
         android:gravity="center"
-        android:text="Items number"
+        android:text="@string/item_number_word"
         app:layout_constraintStart_toStartOf="@+id/edit_shipment_item_urll"
         app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_urll" />
 
@@ -65,7 +65,7 @@
         android:width="80dp"
         android:height="40dp"
         android:gravity="center"
-        android:hint="Item Price"
+        android:hint="@string/item_price_word"
         app:layout_constraintStart_toStartOf="@+id/textView14"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
@@ -76,7 +76,7 @@
         android:width="80dp"
         android:height="40dp"
         android:gravity="center"
-        android:hint="item Weight"
+        android:hint="@string/item_weight_word"
         app:layout_constraintStart_toStartOf="@+id/edit_shipment_item_price"
         app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_price" />
 
@@ -86,7 +86,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="18dp"
         android:gravity="center_vertical"
-        android:hint="Date"
+        android:hint="@string/date_word"
         app:layout_constraintEnd_toEndOf="@+id/edit_shipment_to"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/edit_shipment_to"
@@ -98,7 +98,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="18dp"
         android:gravity="center_vertical"
-        android:hint="To"
+        android:hint="@string/to_word"
         app:layout_constraintEnd_toEndOf="@+id/edit_shipment_from"
         app:layout_constraintStart_toStartOf="@+id/edit_shipment_from"
         app:layout_constraintTop_toBottomOf="@+id/edit_shipment_from" />
@@ -112,7 +112,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="20dp"
         android:gravity="center_vertical"
-        android:hint="From"
+        android:hint="@string/from_word"
         app:layout_constraintBottom_toTopOf="@+id/edit_shipment_to"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
@@ -127,7 +127,7 @@
         android:width="300dp"
         android:height="40dp"
         android:gravity="center_vertical"
-        android:hint="item name"
+        android:hint="@string/item_name_word"
         app:layout_constraintEnd_toEndOf="@+id/edit_shipment_date"
         app:layout_constraintStart_toStartOf="@+id/edit_shipment_date"
         app:layout_constraintTop_toBottomOf="@+id/edit_shipment_date" />
@@ -192,7 +192,7 @@
         android:layout_width="130dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
-        android:text="save edit"
+        android:text="@string/save_changes_word"
         app:layout_constraintStart_toStartOf="@+id/edit_shipment_get_image_button"
         app:layout_constraintTop_toBottomOf="@+id/edit_shipment_get_image_button" />
 
