--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="7dp"
         android:checked="true"
         android:gravity="center_vertical"
-        android:text="passport number "
+        android:text="@string/passport_num_word"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
         android:layout_width="90dp"
         android:layout_height="35dp"
         android:gravity="center"
-        android:text="Shipments"
+        android:text="@string/shipments_word"
         android:textSize="17sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toEndOf="@+id/profile_trips_number_textview"
@@ -66,7 +66,7 @@
         android:layout_width="90dp"
         android:layout_height="35dp"
         android:gravity="center"
-        android:text="Trips"
+        android:text="@string/trips_word"
         android:textSize="17sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toEndOf="@+id/profile_shipments_number_textview"
@@ -111,7 +111,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:gravity="center"
-        android:text="User name"
+        android:text="@string/user_name_word"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_image_image_view" />
@@ -123,7 +123,7 @@
         android:layout_marginTop="22dp"
         android:layout_marginEnd="17dp"
         android:background="#FFFFFF"
-        android:text="Edit"
+        android:text="@string/edit_word"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -156,7 +156,7 @@
         android:layout_height="35dp"
         android:layout_marginTop="140dp"
         android:gravity="center"
-        android:text="Deals"
+        android:text="@string/deals_word"
         android:textSize="17sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toEndOf="@+id/profile_deals_number_textview"
@@ -170,7 +170,7 @@
         android:layout_marginTop="32dp"
         android:checked="true"
         android:gravity="center_vertical"
-        android:text="Email "
+        android:text="@string/email_word"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -184,7 +184,7 @@
         android:layout_marginTop="7dp"
         android:checked="true"
         android:gravity="center_vertical"
-        android:text="phone number "
+        android:text="@string/phone_num_word"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -196,7 +196,7 @@
         android:layout_height="24dp"
         android:layout_marginStart="23dp"
         android:layout_marginTop="65dp"
-        android:text="Rate"
+        android:text="@string/rate_word"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/profile_user_name_text_view"
