--- a/app/src/main/res/layout/activity_edit_trip.xml
+++ b/app/src/main/res/layout/activity_edit_trip.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D67F7F">
+    android:background="#A35C5C">
 
     <EditText
-        android:id="@+id/create_trip_last_date"
+        android:id="@+id/edit_trip_last_date"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginStart="44dp"
@@ -17,10 +17,10 @@
         android:hint="@string/date_word"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_trip_available_weight" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_trip_available_weight" />
 
     <EditText
-        android:id="@+id/create_trip_available_weight"
+        android:id="@+id/edit_trip_available_weight"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginStart="44dp"
@@ -31,10 +31,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_trip_to" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_trip_to" />
 
     <EditText
-        android:id="@+id/create_trip_to"
+        android:id="@+id/edit_trip_to"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginStart="44dp"
@@ -45,10 +45,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_trip_from" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_trip_from" />
 
     <EditText
-        android:id="@+id/create_trip_from"
+        android:id="@+id/edit_trip_from"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginStart="44dp"
@@ -57,14 +57,14 @@
         android:layout_marginBottom="20dp"
         android:gravity="center_vertical"
         android:hint="@string/from_word"
-        app:layout_constraintBottom_toTopOf="@+id/create_trip_to"
+        app:layout_constraintBottom_toTopOf="@+id/edit_trip_to"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/create_trip_back_button"
+        android:id="@+id/edit_trip_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -75,14 +75,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/create_trip_add_button"
+        android:id="@+id/edit_trip_add_button"
         android:layout_width="130dp"
         android:layout_height="60dp"
         android:layout_marginStart="128dp"
         android:layout_marginTop="64dp"
-        android:text="@string/add_trip_word"
+        android:text="@string/save_changes_word"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_trip_last_date" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_trip_last_date" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
