--- a/app/src/main/res/layout/activity_edit_shipment.xml
+++ b/app/src/main/res/layout/activity_edit_shipment.xml
@@ -2,16 +2,28 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/edit_shipment_warning_text"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="left"
     android:background="#798C8A">
 
+    <Button
+        android:id="@+id/edit_shipment_upload_button"
+        android:layout_width="260dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="4dp"
+        android:text="@string/upload_word"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
     <EditText
         android:id="@+id/edit_shipment_item_urll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="8dp"
         android:width="300dp"
         android:height="40dp"
         android:gravity="center_vertical"
@@ -49,7 +61,7 @@
         android:id="@+id/textView14"
         android:layout_width="116dp"
         android:layout_height="43dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="8dp"
         android:width="80dp"
         android:height="40dp"
         android:gravity="center"
@@ -61,7 +73,7 @@
         android:id="@+id/edit_shipment_item_price"
         android:layout_width="133dp"
         android:layout_height="43dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:width="80dp"
         android:height="40dp"
         android:gravity="center"
@@ -84,7 +96,7 @@
         android:id="@+id/edit_shipment_date"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="8dp"
         android:gravity="center_vertical"
         android:hint="@string/date_word"
         app:layout_constraintEnd_toEndOf="@+id/edit_shipment_to"
@@ -96,7 +108,7 @@
         android:id="@+id/edit_shipment_to"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="8dp"
         android:gravity="center_vertical"
         android:hint="@string/to_word"
         app:layout_constraintEnd_toEndOf="@+id/edit_shipment_from"
@@ -123,7 +135,7 @@
         android:id="@+id/edit_shipment_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="8dp"
         android:width="300dp"
         android:height="40dp"
         android:gravity="center_vertical"
@@ -136,7 +148,7 @@
         android:id="@+id/edit_shipment_get_image_button"
         android:layout_width="130dp"
         android:layout_height="57dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:foreground="@android:drawable/ic_menu_camera"
         app:layout_constraintStart_toStartOf="@+id/edit_shipment_item_weight"
         app:layout_constraintTop_toBottomOf="@+id/edit_shipment_plus_item" />
@@ -182,7 +194,7 @@
         android:layout_width="140dp"
         android:layout_height="140dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toEndOf="@+id/edit_shipment_get_image_button"
         app:layout_constraintTop_toBottomOf="@+id/edit_shipment_item_number"
@@ -192,7 +204,7 @@
         android:id="@+id/edit_shipment_edit_button"
         android:layout_width="130dp"
         android:layout_height="60dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
         android:text="@string/save_changes_word"
         app:layout_constraintStart_toStartOf="@+id/edit_shipment_get_image_button"
         app:layout_constraintTop_toBottomOf="@+id/edit_shipment_get_image_button" />
@@ -221,5 +233,17 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="If you presses Uploade you will not be able to edit this shipment"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_the_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
