--- a/app/src/main/res/layout/trip_item.xml
+++ b/app/src/main/res/layout/trip_item.xml
@@ -181,7 +181,7 @@
             android:layout_marginTop="18dp"
             android:layout_marginEnd="35dp"
             android:background="#FF0"
-            android:text="send request ?"
+            android:text="@string/send_request_question"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
