--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="gray2">#3c4d56</color>
     <color name="up">#747d82</color>
     <color name="down">#cacac1</color>
+    <color name="red">#FFCC0000</color>
+    <color name="green">#FF99CC00</color>
 </resources>
